Feat: list-page.html 수정, nav-bar 숙소찾기 수정

--- a/src/main/resources/templates/layout/navigation-bar.html
+++ b/src/main/resources/templates/layout/navigation-bar.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0">
                 <a href="/" class="nav-item nav-link active">홈</a>
-                <a href="" class="nav-item nav-link">숙소 찾기</a>
+                <a href="/accommodation?keyword=&startDate=&endDate=" class="nav-item nav-link">숙소 찾기</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" sec:authorize="isAuthenticated()">My Page</a>
                     <div class="dropdown-menu m-0">
