Feat: index.html, list-page.html 문구 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -82,7 +82,7 @@
                             <a class="btn-hover btn text-white py-2 px-4"></a>
                         </div>
                         <div class="col-6 text-end px-0">
-                            <a class="btn-hover btn text-white py-2 px-4" th:href="'/accommodation/'+${accommodation.getId()}">Book Now</a>
+                            <a class="btn-hover btn text-white py-2 px-4" th:href="'/accommodation/'+${accommodation.getId()}">상세 보기</a>
                         </div>
                     </div>
                 </div>
