--- a/src/main/resources/templates/list-page.html
+++ b/src/main/resources/templates/list-page.html
@@ -85,8 +85,8 @@
 <div class="container-fluid packages py-5">
     <div class="container py-5">
         <div class="mx-auto text-center mb-5" style="max-width: 900px;">
-            <h5 class="section-title px-3">Packages</h5>
-            <h1 class="mb-0">Awesome Packages</h1>
+            <h5 class="section-title px-3">숙소</h5>
+            <h1 class="mb-0">호텔/리조트/팬션/모텔</h1>
         </div>
         <div class="row row-cols-4 row-cols-md-4 g-4">
             <div class="col" th:each="accommodation : ${accommodations}">
