feat: 예약목록페이지 jpql오류

--- a/src/main/resources/templates/layout/navigation-bar.html
+++ b/src/main/resources/templates/layout/navigation-bar.html
@@ -28,7 +28,7 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" sec:authorize="isAuthenticated()">My Page</a>
                     <div class="dropdown-menu m-0">
                         <a href="/mypage" class="dropdown-item">내 정보</a>
-                        <a href="" class="dropdown-item">예약 내역</a>
+                        <a href="/reservation" class="dropdown-item">예약 내역</a>
                     </div>
                 </div>
                 <div class="nav-item dropdown">
