feat: 예약 상세리스트 페이지

--- a/src/main/resources/templates/my-reservation-list.html
+++ b/src/main/resources/templates/my-reservation-list.html
@@ -86,6 +86,7 @@
                                         <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i><span th:text="'예약 상태 : ' + ${reservation.getStatus()}"></span></p>
                                     </div>
                                 </div>
+                                <a th:href="${reservation.}">상세 보기</a>
                             </div>
                         </div>
                     </div>
