--- a/src/main/resources/templates/my-accommodation-list.html
+++ b/src/main/resources/templates/my-accommodation-list.html
@@ -158,7 +158,7 @@
         </div>
         <div class="col-12">
             <div class="text-center">
-                <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="/accommodation/register">새 숙소 등록</a>
+                <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="/accommodation/registerPage">새 숙소 등록</a>
             </div>
         </div>
     </div>
