--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -176,7 +176,7 @@
                             <div class="container py-5">
                                 <div class="row g-3">
                                     <div class="col-md-6 text-md-start text-center" style="font-size: 20px;"
-                                         th:text="${review.content}">
+                                         th:text="${review.roomTitle}">
                                     </div>
                                     <div class="col-md-6 text-md-end text-center">
                                         <div class="row g-3">
