--- a/src/main/resources/templates/accommodation-register.html
+++ b/src/main/resources/templates/accommodation-register.html
@@ -111,50 +111,14 @@
                         <div class="row">
                             <div class="col">
                                 <ul class="list-group list-group-horizontal">
-                                    <li class="list-group-item">
-                                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                                        주차장
-                                    </li>
-                                    <li class="list-group-item">
-                                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                                        편의점
-                                    </li>
-                                    <li class="list-group-item">
-                                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                                        레스토랑
-                                    </li>
-                                    <li class="list-group-item">
-                                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                                        헬스장
-                                    </li>
-                                    <li class="list-group-item">
-                                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                                        수영장
-                                    </li>
-                                    <li class="list-group-item">
-                                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                                        와인바
-                                    </li>
-                                    <li class="list-group-item">
-                                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                                        바베큐
-                                    </li>
-                                    <li class="list-group-item">
-                                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                                        키즈클럽
-                                    </li>
-                                    <li class="list-group-item">
-                                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                                        이벤트공간
-                                    </li>
-                                    <li class="list-group-item">
-                                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                                        셔틀버스
-                                    </li>
-                                    <li class="list-group-item">
-                                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                                        와이파이
-                                    </li>
+                                    <!-- 숙박 시설 목록을 반복하여 각 항목을 체크박스로 표시 -->
+                                    <th:block th:each="facility : ${accommodationFacilityList}">
+                                        <li class="list-group-item">
+                                            <!-- 각 숙박 시설을 체크박스로 표시 -->
+                                            <input class="form-check-input me-1" type="checkbox" th:id="'facility_' + ${facility.id}" th:value="${facility.name}" aria-label="...">
+                                            <label th:for="'facility_' + ${facility.id}" th:text="${facility.name}">Facility Name</label>
+                                        </li>
+                                    </th:block>
                                 </ul>
                             </div>
                         </div>
@@ -403,16 +367,21 @@
         const regionSelect = document.getElementById('selectRegion'); // select 요소 가져오기
         const regionIndex = regionSelect.selectedIndex; // 선택된 옵션의 인덱스 가져오기
 
-        //시설 선택
-        const checkedCheckboxes = document.querySelectorAll('input[type="checkbox"]:checked');
-
         const accommodationName = formData.get('accommodationName');
         const region = regionSelect.options[regionIndex].text;
         const address = formData.get('address');
         const checkIn = formData.get('checkIn');
         const checkOut = formData.get('checkOut');
         const content = formData.get('accommodationContent');
-        const facilityList = Array.from(checkedCheckboxes).map(checkbox => checkbox.nextSibling.nodeValue.trim());
+        // 체크된 숙박 시설 목록 추적
+        const facilityList = [];
+        const checkboxes = document.querySelectorAll('.form-check-input[type=checkbox]:checked');
+        checkboxes.forEach(function(checkbox) {
+            if (checkbox.value !== '') {
+                facilityList.push(checkbox.value);
+            }
+        });
+
 
         console.log(accommodationName);
         console.log(region);
@@ -444,7 +413,7 @@
                 // 요청이 성공적으로 처리되면, 여기서 UI를 업데이트하거나 페이지를 새로고침할 수 있습니다.
                 alert('숙소 등록이 완료되었습니다.');
                 //TODO: 어디로 보내지
-                window.location.href = '/';
+                // window.location.href = '/';
             })
             .catch(error => {
                 console.error('Error:', error);
