--- a/src/main/resources/templates/my-reservation-list.html
+++ b/src/main/resources/templates/my-reservation-list.html
@@ -55,8 +55,11 @@
             <h1 class="mb-0">my reservations</h1>
         </div>
         <div class="row g-3">
+            <div class="text-center" th:if="${reservationList.size()==0}">
+                <h3 class="mb-0"><strong>예약내역이 없습니다!</strong></h3>
+            </div>
             <!-- accodion start-->
-            <div class="accordion" id="accordionFlushExample" th:each="reservation:${reservationList}">
+            <div class="accordion" id="accordionFlushExample" th:each="reservation,reservationStat:${reservationList}">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingOne">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
