--- a/src/main/resources/templates/my-accommodation-list.html
+++ b/src/main/resources/templates/my-accommodation-list.html
@@ -54,102 +54,30 @@
             <h5 class="section-title px-3">내 숙소 관리</h5>
             <h1 class="mb-0">my accommodations</h1>
         </div>
-        <div class="row g-3">
-            <div class="col-lg-12">
-                <div class="row g-3">
-                    <div class="col-12">
-                        <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 ps-0">
-                            <div class="service-icon p-4">
-                                <i class="fa fa-globe fa-4x text-primary"></i>
-                            </div>
-                            <div class="service-content">
-                                <h5 class="mb-4"><a href="/accommodation/1">숙소명</a></h5>
-                                <p class="mb-2">숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명
-                                </p>
-                                <div class="row gy-2 gx-4 mb-4">
-                                    <div class="col-sm-6">
-                                        <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>지역</p>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>가격</p>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>객실 수</p>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i></p>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>체크인</p>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>체크아웃</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+        <div class="row">
+            <!-- accommodation 리스트 반복 -->
+            <div th:each="accommodation : ${myAccommodations}" class="col-12">
+                <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 ps-0">
+                    <div class="service-icon p-4">
+                        <i class="fa fa-globe fa-4x text-primary"></i>
                     </div>
-                    <div class="col-12">
-                        <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 ps-0">
-                            <div class="service-icon p-4">
-                                <i class="fa fa-globe fa-4x text-primary"></i>
+                    <div class="service-content">
+                        <h5 class="mb-4">
+                            <a th:text="${accommodation.getName()}">숙소명</a>
+                        </h5>
+                        <p class="mb-2" th:text="${accommodation.getContent()}">숙소 설명...</p>
+                        <div class="row gy-2 gx-4 mb-4">
+                            <div class="col-sm-6">
+                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i><span th:text="${accommodation.getRegion()}"></span></p>
                             </div>
-                            <div class="service-content">
-                                <h5 class="mb-4"><a href="/accommodation/2">숙소명</a></h5>
-                                <p class="mb-2">숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명
-                                </p>
-                                <div class="row gy-2 gx-4 mb-4">
-                                    <div class="col-sm-6">
-                                        <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>지역</p>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>가격</p>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>객실 수</p>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i></p>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>체크인</p>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>체크아웃</p>
-                                    </div>
-                                </div>
+                            <div class="col-sm-6">
+                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i><span th:text="${accommodation.getAddress()}"></span></p>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 ps-0">
-                            <div class="service-icon p-4">
-                                <i class="fa fa-globe fa-4x text-primary"></i>
+                            <div class="col-sm-6">
+                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>체크인 시간 : <span th:text="${accommodation.getCheckIn()}"></span></p>
                             </div>
-                            <div class="service-content">
-                                <h5 class="mb-4"><a href="/accommodation/3">숙소명</a></h5>
-                                <p class="mb-2">숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명숙소 설명
-                                </p>
-                                <div class="row gy-2 gx-4 mb-4">
-                                    <div class="col-sm-6">
-                                        <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>지역</p>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>가격</p>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>객실 수</p>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i></p>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>체크인</p>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>체크아웃</p>
-                                    </div>
-                                </div>
+                            <div class="col-sm-6">
+                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>체크아웃 시간 : <span th:text="${accommodation.getCheckOut()}"></span></p>
                             </div>
                         </div>
                     </div>
