--- a/src/main/resources/templates/review-register.html
+++ b/src/main/resources/templates/review-register.html
@@ -41,7 +41,7 @@
             <h5 class="section-title px-3">Review</h5>
             <h1 class="mb-0">솔직한 후기를 작성해 주세요!</h1>
         </div>
-        <form th:action="@{/review/register/{acom_id}(acom_id=${acom_id})}" th:method="post">
+        <form th:action="@{/review/register/{acom_id}(acom_id=${acom_id})}" th:method="post" enctype="multipart/form-data">
             <div class="row g-3">
                 <div class="col-md-5">
                     <label for="reviewTitle" class="form-label">리뷰할 방 선택</label>
@@ -53,8 +53,8 @@
                 <input type="hidden" name="accommodation" th:value="${accommodation}">
                 <input type="hidden" name="member" th:value="${member}">
                 <div class="col-md-5">
-<!--                    <label for="imageUpload" class="form-label">이미지 업로드</label>-->
-<!--                    <input type="file" class="form-control" id="imageUpload">-->
+                    <label for="imageUpload" class="form-label">이미지 업로드</label>
+                    <input type="file" class="form-control" onchange="addFile(this);" id="imageUpload" name="file" accept="image/*" multiple>
                 </div>
                 <div class="col-md-2">
                     <label for="starRating" class="form-label">별점</label>
