feat: 숙소-시설 저장 성공 ㅎㅎ

--- a/src/main/resources/templates/accommodation-register.html
+++ b/src/main/resources/templates/accommodation-register.html
@@ -403,7 +403,7 @@
                 checkIn: checkIn,
                 checkOut: checkOut,
                 content: content,
-                // facilityList: facilityList
+                facilityList: facilityList
             })
         })
             .then(response => {
