feat: gpt응답 시간 고려

--- a/src/main/resources/templates/accommodation-register.html
+++ b/src/main/resources/templates/accommodation-register.html
@@ -413,7 +413,7 @@
                 // 요청이 성공적으로 처리되면, 여기서 UI를 업데이트하거나 페이지를 새로고침할 수 있습니다.
                 alert('숙소 등록이 완료되었습니다.');
                 //TODO: 어디로 보내지
-                // window.location.href = '/';
+                window.location.href = '/';
             })
             .catch(error => {
                 console.error('Error:', error);
